tests/flow/dynamic_export/not_object.js
// @flow
let x : any = 3; // error
module.exports = x;
